--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,14 @@
 {
-    "name": "middleland/dispatcher",
+    "name": "oscarotero/middleland",
     "type": "library",
-    "description": "Simple middleware dispatcher for server and client side",
-    "keywords": ["middleware", "psr-7", "http"],
-    "homepage": "https://github.com/middleland/dispatcher",
+    "description": "PSR-15 middleware dispatcher",
+    "keywords": [
+        "middleware",
+        "psr-7",
+        "psr-15",
+        "http"
+    ],
+    "homepage": "https://github.com/oscarotero/dispatcher",
     "license": "MIT",
     "authors": [
         {
@@ -15,12 +20,15 @@
     ],
     "support": {
         "email": "oom@oscarotero.com",
-        "issues": "https://github.com/middleland/dispatcher/issues"
+        "issues": "https://github.com/oscarotero/dispatcher/issues"
     },
     "require": {
-        "php": ">=7.0",
-        "http-interop/http-middleware": "^0.1.1",
-        "zendframework/zend-diactoros": "^1.3"
+        "php": "^7.0",
+        "http-interop/http-middleware": "^0.4"
+    },
+    "require-dev": {
+        "zendframework/zend-diactoros": "^1.3",
+        "friendsofphp/php-cs-fixer": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -31,5 +39,9 @@
         "psr-4": {
             "Middleland\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "cs-fix": "php-cs-fixer fix ."
     }
 }
