--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
-{
+ {
     "name": "oscarotero/middleland",
     "type": "library",
     "description": "PSR-15 middleware dispatcher",
@@ -25,11 +25,12 @@
     "require": {
         "php": "^7.0",
         "http-interop/http-middleware": "^0.4",
-        "container-interop/container-interop": "^1.1"
+        "psr/container": "^1.0"
     },
     "require-dev": {
         "zendframework/zend-diactoros": "^1.3",
-        "friendsofphp/php-cs-fixer": "^2.0"
+        "friendsofphp/php-cs-fixer": "^2.0",
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
         "psr-4": {
