--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     },
     "scripts": {
         "test": "phpunit",
+        "test-coverage": "phpunit --coverage-text",
         "cs-fix": "php-cs-fixer fix ."
     }
 }
