--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
+  - 7.4
+  - 8.0
 
 before_script:
-  - composer install -n
+  - composer install --ignore-platform-reqs
 
 script:
   - composer test-coverage
