--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
 * text=auto eol=lf
 
-/tests         export-ignore
-.gitattributes export-ignore
-.gitignore     export-ignore
-.travis.yml    export-ignore
-phpunit.xml    export-ignore
+/.github          export-ignore
+/tests            export-ignore
+.gitattributes    export-ignore
+.gitignore        export-ignore
+.php_cs           export-ignore
+phpunit.xml.dist  export-ignore
