--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   "require": {
     "php": "^7.1|^8.0",
     "psr/http-server-middleware": "^1.0",
-    "psr/container": "^1.0"
+    "psr/container": "^1.0 | ^2.0"
   },
   "require-dev": {
     "laminas/laminas-diactoros": "^1.3",
